syntax = "proto3";
package oid4vc;

import "google/protobuf/any.proto";

service OID4VP {
  rpc CreateRequest (RequestConfig) returns (Request) {}
}

message RequestConfig {
  google.protobuf.Any presentationDefinition = 1;
  optional string nonce = 2;
  optional string state = 3;
}

message Request {
  string uri = 1;
  string request = 2;
}